@@ -10,6 +10,7 @@ Version 0.5.4
 * Bugfix: there was a bug where alchemy would fail if you didn't already have any of the item being crafted in your inventory.
 * Bugfix: Fixed Gol Tailfuck/Hyperfuck scene prompt.
 * Bugfix: Gwendy's Win scenes were capped to Titjob/Tease level. This has been fixed, and the rest of the scenes can be accessed once again.
+* Bugfix: Cleanup of debug output.
 
 Adding 5k words of new content:
 * A new loss scene for Gwendy with quite a lot of variation. It has a major variation if the pc has low dominance (or is female) involving one of Gwendy's toys.
